--- a/index.html
+++ b/index.html
@@ -127,6 +127,19 @@
 
     </section>
 
+    <!-- CAJA CENTRAL -->
+    <section class="hero">
+        <div class="hero_img">
+            <img src="./assets/img/hand.png" alt="">
+        </div>        
+        <div>
+            <h1>Comienza el Networking</h1>
+            <p>Presiona el botón <b>“Nuevo chat”</b> para comenzar a crear nuevas <br>
+                redes de contacto para tu empresa o emprendimiento.</p>
+        </div>
+
+    </section>
+
 
 </body>
 </html>
